removed memory leaks and added perspective

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "makefile.extensionOutputFolder": "./.vscode",
     "files.associations": {
-        "sdl_timer.h": "c"
+        "sdl_timer.h": "c",
+        "limits": "c",
+        "*.tcc": "c"
     }
 }
